<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.ShoeListViewModel" />
    </data>
    <!--  a constraint layout is used as the viewgroup to hold several views so as to create
              a flat view hierarchy-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_use_this_app"
            app:layout_constraintBottom_toTopOf="@+id/textView_instructions2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_instructions2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_details_of_new_shoe_then_view_the_details"
            app:layout_constraintBottom_toTopOf="@+id/button_instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_instructions" />

        <Button
            android:id="@+id/button_instructions"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.goToShoeList()}"
            android:text="@string/open_app"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_instructions2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>